# labfunctions

./: .black.toml  .coveragerc  .dockerignore  .env.dev.dockerclient  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.3.8-slim  Dockerfile.gpu  Makefile  NOTICE.md  README.md  ROADMAP.md  cluster.example.yaml  docker-compose.yaml  docker-compose.yml  env.docker.example  fileserver.conf  mypy.ini  pyproject.toml  requirements.txt  requirements_client.txt  runtimes.yaml  setup.py  tox.ini  workflows.example.toml  workflows.example.yaml
.github/workflows/: docker_release.yaml  main.yaml  publish-to-test-pypi.yml
docker/: Dockerfile.all  Dockerfile.client  Dockerfile.client.gpu  docker-compose.yaml
docker/all/: .dockerignore  requirements.txt
docker/client/: .dockerignore  Dockerfile  Dockerfile.gpu
docs/: Makefile  conf.py  gce.txt  index.rst  mount.txt  registry.txt
docs/labfunctions/: api_reference.rst  client_installation.rst  concepts.rst  installation.rst  quickstart.rst  release.rst  server_installation.rst
e2e/: test_init_client.py  tester.py
images/: README.md
labfunctions/: __version__.py  alembic.ini  cli.py  commands.py  context.py  defaults.py  events.py  hashes.py  log.py  models.py  notifications.py  redis_conn.py  scheduler.py  secrets.py  server.py  shortcuts.py  utils.py
labfunctions/client/: base.py  cluster_client.py  diskclient.py  history_client.py  init_script.py  labstate.py  nbclient.py  projects_client.py  shortcuts.py  state.py  utils.py  workflows_client.py
labfunctions/cluster/: __init__.py  base.py  cluster_file.py  context.py  control.py  deploy.py  gcloud_provider.py  inventory.py  local_provider.py  shortcuts.py  ssh.py  types.py  utils.py
labfunctions/cluster2/: __init__.py  base.py  context.py  control.py  deploy.py  inventory.py  types.py
labfunctions/cmd/: agent.py  cluster.py  common.py  executors.py  history.py  manager.py  project.py  runtimes.py  services.py  utils.py  workflows.py
labfunctions/conf/: __init__.py  global_client.py  global_settings.py  jtemplates.py  machines.yaml  server_settings.py  utils.py
labfunctions/control/: __init__.py  agent.py  scheduler.py  tasks.py
labfunctions/control_plane/: agent.py  deploy.py  heartbeat.py  register.py  rqscheduler.py
labfunctions/db/: common.py  nosync.py  sync.py  utils.py
labfunctions/errors/: __init__.py  client.py  cluster.py  generics.py
labfunctions/executors/: __init__.py  docker_exec.py  execid.py  jupyter_exec.py  local_exec.py  nbtask_base.py
labfunctions/io/: __init__.py  cache.py  kv_gcs.py  kv_local.py  kvspec.py  memory_store.py
labfunctions/managers/: history_mg.py  machine_mg.py  projects_mg.py  runtimes_mg.py  users_mg.py  workflows_mg.py
labfunctions/migrations/: env.py
labfunctions/notebooks/: context.py
labfunctions/runtimes/: builder.py  bundler.py  context.py  utils.py
labfunctions/security/: __init__.py  auth_bp.py  authentication.py  base.py  redis_tokens.py  scopes.py  utils.py  web.py
labfunctions/types/: __init__.py  agent.py  client.py  cluster.py  config.py  core.py  docker.py  machine.py  runtimes.py  security.py  user.py
labfunctions/web/: clusters_bp.py  events_bp.py  history_bp.py  projects_bp.py  rqjobs_bp.py  runtimes_bp.py  utils.py  workflows_bp.py
nb_workflows/: __init__.py  __version__.py  auth.py  build.py  cache.py  cli.py  client.py  client_deprecated.py  commands.py  conf.py  context.py  defaults.py  events.py  hashes.py  init_script.py  log.py  models.py  notebooks.py  notifications.py  qworker.py  scheduler.py  secrets.py  server.py  shortcuts.py  test.py  uploads.py  utils.py
nb_workflows/auth/: __init__.py  authenticate.py  gorups.py  models.py  shortcuts.py  types.py  users.py  utils.py
nb_workflows/client/: __init__.py  agent.py  base.py  diskclient.py  history_client.py  init_script.py  nbclient.py  projects_client.py  shortcuts.py  state.py  types.py  uploads.py  utils.py  workflows_client.py  workflows_file.py
nb_workflows/cluster/: __init__.py  base.py  cluster_file.py  context.py  control.py  deploy.py  digital_ocean.py  gcloud.py  gcloud_provider.py  inventory.py  local_provider.py  shortcuts.py  utils.py
nb_workflows/cmd/: agent.py  cluster.py  common.py  executors.py  flycheck_project.py  history.py  manager.py  project.py  runtimes.py  services.py  utils.py  workflows.py
nb_workflows/conf/: __init__.py  client_settings.py  defaults.py  global_client.py  global_settings.py  jtemplates.py  machines.yaml  server_settings.py  types.py  utils.py
nb_workflows/control_plane/: agent.py  deploy.py  heartbeat.py  register.py  worker.py
nb_workflows/core/: core.py  dispatchers.py  (+6 more)
requirements/: requirements.txt  requirements_all.txt  requirements_client.txt  requirements_dev.txt
scripts/: alembic_revision.sh  clusters.yaml  create_machines.py  createpsql  devenv.sh  do_deprecated.py  docker_compose.py  docker_deprecated.py  env.docker.example  es512.sh  gce.machines.txt  gce_clusters.yaml  gce_snapshot_init.py  gcloud_deprecated.py  generate_authors.sh  get_package_name.py  get_package_version.py  get_packer_version.py  get_version.py  initdb_docker.sh  jupyter.py  local_clusters.yaml  machines.yaml  poetry_version.py  revision.sh  rqtest.py  runcli.sh  setup_agent.py  update_versions.sh  wfile.py
tests/: clusters_test.yaml  conftest.py  conftest2.py  dummy_gce_creds.json  dummy_rsa  dummy_rsa.pub  ecdsa.priv.pem  ecdsa.pub.pem  factories.py  flame_func.py  machines_test.yaml  memory_prof.py  resources.py  runtimes_test.yaml  settings_test.py  test.nbvars  test_auth.py  test_builder.py  test_cli_cluster.py  test_cli_runtimes.py  test_client_auth.py  test_client_base.py  test_client_diskclient.py  test_client_labstate.py  test_cluster.py  test_cluster_control.py  test_conf.py  test_context.py  test_events.py  test_heartbeat.py  test_history.py  test_init_script.py  test_io_kv.py  test_io_memory.py  test_machine.py  test_misc.py  test_models.py  test_projects_bp.py  test_projects_mg.py  test_providers_gce.py  (+18 more)
workflows/: test_workflow.py
(+158 files in other folders)
